docs-archive/apache-airflow-providers-http/6.0.4/_sources/_api/airflow/providers/http/triggers/http/index.rst.txt
airflow.providers.http.triggers.http
====================================

.. py:module:: airflow.providers.http.triggers.http


Classes
-------

.. autoapisummary::

   airflow.providers.http.triggers.http.HttpResponseSerializer
   airflow.providers.http.triggers.http.HttpTrigger
   airflow.providers.http.triggers.http.HttpSensorTrigger
   airflow.providers.http.triggers.http.HttpEventTrigger


Functions
---------

.. autoapisummary::

   airflow.providers.http.triggers.http.serialize_auth_type
   airflow.providers.http.triggers.http.deserialize_auth_type


Module Contents
---------------

.. py:function:: serialize_auth_type(auth)

.. py:function:: deserialize_auth_type(path)

.. py:class:: HttpResponseSerializer

   Serializer for requests.Response objects used in deferred HTTP tasks.


   .. py:method:: serialize(response)
      :staticmethod:


      Convert a requests.Response object to a JSON serializable dictionary.



   .. py:method:: deserialize(data)
      :staticmethod:


      Reconstruct a requests.Response object from serialized data.



.. py:class:: HttpTrigger(http_conn_id = 'http_default', auth_type = None, method = 'POST', endpoint = None, headers = None, data = None, extra_options = None)

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`


   HttpTrigger run on the trigger worker.

   :param http_conn_id: http connection id that has the base
       API url i.e https://www.google.com/ and optional authentication credentials. Default
       headers can also be specified in the Extra field in json format.
   :param auth_type: The auth type for the service
   :param method: the API method to be called
   :param endpoint: Endpoint to be called, i.e. ``resource/v1/query?``.
   :param headers: Additional headers to be passed through as a dict.
   :param data: Payload to be uploaded or request parameters.
   :param extra_options: Additional kwargs to pass when creating a request.
       For example, ``run(json=obj)`` is passed as
       ``aiohttp.ClientSession().get(json=obj)``.
       2XX or 3XX status codes


   .. py:attribute:: http_conn_id
      :value: 'http_default'



   .. py:attribute:: method
      :value: 'POST'



   .. py:attribute:: auth_type
      :value: None



   .. py:attribute:: endpoint
      :value: None



   .. py:attribute:: headers
      :value: None



   .. py:attribute:: data
      :value: None



   .. py:attribute:: extra_options
      :value: None



   .. py:method:: serialize()

      Serialize HttpTrigger arguments and classpath.



   .. py:method:: run()
      :async:


      Make a series of asynchronous http calls via a http hook.



.. py:class:: HttpSensorTrigger(endpoint = None, http_conn_id = 'http_default', method = 'GET', data = None, headers = None, extra_options = None, poke_interval = 5.0)

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`


   A trigger that fires when the request to a URL returns a non-404 status code.

   :param endpoint: The relative part of the full url
   :param http_conn_id: The HTTP Connection ID to run the sensor against
   :param method: The HTTP request method to use
   :param data: payload to be uploaded or aiohttp parameters
   :param headers: The HTTP headers to be added to the GET request
   :param extra_options: Additional kwargs to pass when creating a request.
       For example, ``run(json=obj)`` is passed as ``aiohttp.ClientSession().get(json=obj)``
   :param poke_interval: Time to sleep using asyncio


   .. py:attribute:: endpoint
      :value: None



   .. py:attribute:: method
      :value: 'GET'



   .. py:attribute:: data
      :value: None



   .. py:attribute:: headers
      :value: None



   .. py:attribute:: extra_options


   .. py:attribute:: http_conn_id
      :value: 'http_default'



   .. py:attribute:: poke_interval
      :value: 5.0



   .. py:method:: serialize()

      Serialize HttpTrigger arguments and classpath.



   .. py:method:: run()
      :async:


      Make a series of asynchronous http calls via an http hook.



.. py:class:: HttpEventTrigger(response_check_path, http_conn_id = 'http_default', auth_type = None, method = 'GET', endpoint = None, headers = None, data = None, extra_options = None, poll_interval = 60.0)

   Bases: :py:obj:`HttpTrigger`, :py:obj:`airflow.triggers.base.BaseEventTrigger`


   HttpEventTrigger for event-based DAG scheduling when the API response satisfies the response check.

   :param response_check_path: Path to the function that evaluates whether the API response
       passes the conditions set by the user to fire the trigger. The method must be asynchronous.
   :param http_conn_id: http connection id that has the base
       API url i.e https://www.google.com/ and optional authentication credentials. Default
       headers can also be specified in the Extra field in json format.
   :param auth_type: The auth type for the service
   :param method: The API method to be called
   :param endpoint: Endpoint to be called, i.e. ``resource/v1/query?``.
   :param headers: Additional headers to be passed through as a dict.
   :param data: Payload to be uploaded or request parameters.
   :param extra_options: Additional kwargs to pass when creating a request.
   :parama poll_interval: How often, in seconds, the trigger should send a request to the API.


   .. py:attribute:: response_check_path


   .. py:attribute:: poll_interval
      :value: 60.0



   .. py:method:: serialize()

      Serialize HttpEventTrigger arguments and classpath.



   .. py:method:: run()
      :async:


      Make a series of asynchronous http calls via a http hook until the response passes the response check.



